kubernetes/infra/piraeus-datastore/piraeus-datastore/_base/netpols.yaml
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
# Based on https://github.com/piraeusdatastore/piraeus-operator/blob/v2/config/extras/network-policy/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: satellite
  labels:
    app.kubernetes.io/component: linstor-satellite
spec:
  description: "Network policies for the LINSTOR satellite"
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/component: linstor-satellite
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/component: linstor-controller
      toPorts:
        - ports:
            - port: "3366"
              endPort: 3367
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/component: linstor-satellite
      toPorts:
        - ports:
            - port: "7000"
              endPort: 9000
              protocol: TCP
    # TODO: remove after cluster wide has been rolled out
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
